--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -14,7 +14,7 @@
   </ion-header>
 
   <div id="container">
-    <strong>Aqui comienza la creación de la app</strong>
+    <strong>Aqui comienza todo</strong>
     <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
   </div>
 </ion-content>
