--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,27 +1,32 @@
-
-
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Inicio
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
-
-
-
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
+<ion-menu contentId="main-content">
+  <ion-header>
     <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
+      <ion-title>Menu Content</ion-title>
     </ion-toolbar>
   </ion-header>
+  <ion-content class="ion-padding">This is the menu content.</ion-content>
+  <ion-item> <ion-label>Pokemon</ion-label> </ion-item>
+  <ion-item> <ion-label>Pokemon</ion-label> </ion-item>
+  <ion-item> <ion-label>Pokemon</ion-label> </ion-item>
+  <ion-item> <ion-label>Pokemon</ion-label> </ion-item>
+</ion-menu>
+<div class="ion-page" id="main-content">
+  <ion-header>
+    <ion-toolbar>
+      <ion-buttons slot="start">
+        <ion-menu-button></ion-menu-button>
+      </ion-buttons>
+      <ion-title> <ion-button>Home</ion-button> <ion-button>user</ion-button></ion-title>
+    </ion-toolbar>
+  </ion-header>
+  <ion-content class="ion-padding"> Tap the button in the toolbar to open the menu. </ion-content>
 
-  <div id="container">
-    <strong>Aqui comienza todo</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
-</ion-content>
+  <ion-footer class="ion-no-border">
+    <ion-toolbar>
+      <ion-title>Pie de Pagina</ion-title>
+    </ion-toolbar>
+  </ion-footer>
+</div>
 
 
 
