Cambios para visualizar app

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,3 +1,5 @@
+
+
 <ion-menu contentId="main-content">
   <ion-header>
     <ion-toolbar>
@@ -5,27 +7,36 @@
     </ion-toolbar>
   </ion-header>
   <ion-content class="ion-padding">This is the menu content.</ion-content>
-  <ion-item> <ion-label>Pokemon</ion-label> </ion-item>
-  <ion-item> <ion-label>Pokemon</ion-label> </ion-item>
-  <ion-item> <ion-label>Pokemon</ion-label> </ion-item>
-  <ion-item> <ion-label>Pokemon</ion-label> </ion-item>
+  <ion-button>configuraciones</ion-button>
+  <ion-button> <ion-icon name="logo-ionic"> </ion-icon> User</ion-button>
 </ion-menu>
 <div class="ion-page" id="main-content">
   <ion-header>
     <ion-toolbar>
-      <ion-buttons slot="start">
+      <ion-buttons slot="start"><ion-badge>24</ion-badge>
         <ion-menu-button></ion-menu-button>
       </ion-buttons>
-      <ion-title> <ion-button>Home</ion-button> <ion-button>user</ion-button></ion-title>
+      <ion-title>Pagina Principal</ion-title>
     </ion-toolbar>
   </ion-header>
   <ion-content class="ion-padding"> Tap the button in the toolbar to open the menu. </ion-content>
 
+
+
+
+
+
   <ion-footer class="ion-no-border">
     <ion-toolbar>
-      <ion-title>Pie de Pagina</ion-title>
+      <ion-button> Home </ion-button>
+      <ion-button> prod </ion-button>
+      <ion-button> fav</ion-button>
+      <ion-button> carrito </ion-button>
     </ion-toolbar>
   </ion-footer>
+
+
+
 </div>
 
 
