--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,8 +1,24 @@
-<ion-toolbar>inicio de sesion</ion-toolbar>
-
-
-<ion-list>
-<ion-input label="correo electronico" label-placement="floating" fill="outline" placeholder="ingresa texto"></ion-input>
-<ion-input label="password" label-placement="floating" fill="outline" placeholder="Ingresa texto"></ion-input>
-</ion-list>
-
+<ion-header>
+    <ion-toolbar>
+      <ion-title>Inicio de Sesión</ion-title>
+    </ion-toolbar>
+  </ion-header>
+  
+  <ion-content class="ion-padding">
+    <form (ngSubmit)="onLogin()">
+      <ion-item>
+        <ion-label position="floating">Correo Electrónico</ion-label>
+        <ion-input type="email" [(ngModel)]="email" name="email" required></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-label position="floating">Contraseña</ion-label>
+        <ion-input type="password" [(ngModel)]="password" name="password" required></ion-input>
+      </ion-item>
+      <ion-button expand="full" type="submit">Iniciar Sesión</ion-button>
+    </form>
+    <ion-text color="medium" class="ion-text-center">
+      <p (click)="onCreateAccount()">Crear Cuenta</p>
+      <p (click)="onRecoverPassword()">Recuperar Contraseña</p>
+    </ion-text>
+  </ion-content>
+  
