--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,27 +1,44 @@
-#container {
-  text-align: center;
-
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
+ion-header {
+  ion-toolbar {
+    ion-title {
+      font-size: 24px;
+    }
+  }
 }
 
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
-}
+ion-content {
+  form {
+    ion-item {
+      margin-bottom: 20px;
 
-#container p {
-  font-size: 16px;
-  line-height: 22px;
+      ion-label {
+        font-size: 18px;
+      }
 
-  color: #8c8c8c;
+      ion-input {
+        font-size: 16px;
+      }
+    }
 
-  margin: 0;
-}
+    ion-button {
+      font-size: 18px;
+      padding: 12px;
+    }
+  }
 
-#container a {
-  text-decoration: none;
+  ion-text {
+    font-size: 16px;
+    text-align: center;
+    margin-top: 20px;
+
+    p {
+      cursor: pointer;
+      color: #007bff;
+      margin: 10px 0;
+    }
+
+    p:hover {
+      text-decoration: underline;
+    }
+  }
 }
