--- a/src/app/inicio/inicio.page.html
+++ b/src/app/inicio/inicio.page.html
@@ -5,7 +5,7 @@
 </ion-header>
 
 <ion-content class="ion-padding">
-  <h2>Bienvenido a la Aplicación</h2>
+  <h2>Bienvenido Juan</h2>
   <p>Estamos encantados de tenerte aquí. ¡Explora y disfruta de todas las funcionalidades!</p>
 </ion-content>
 
